# near-private-payroll

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  GROTH16_SETUP.md  README.md  ZCASH_COMMAND_REFERENCE.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
bridge-relayer/: .env.example  .gitignore  README.md  check-deposits.ts  debug-addresses.ts  jest.config.js  package-lock.json  package.json  relayer.js  test-address-validation.ts  test-deposit.ts  test-send-zec.ts  test-withdrawal-detection.ts  test-withdrawal.ts  tsconfig.json
bridge-relayer/scripts/: get-custody-address.sh  init-zallet-account.ts  monitor-zcashd.sh  zcash-cli.ts  zcashd-cli.ts
bridge-relayer/src/: config.ts  index.ts  relayer.ts  types.ts
bridge-relayer/src/__tests__/: integration.test.ts
bridge-relayer/src/services/: near.service.ts  state.service.ts  zcash.service.ts  zcashd.service.ts
bridge-relayer/src/services/__tests__/: state.service.test.ts  zcash.service.test.ts
bridge-relayer/src/tests/: duplicate-prevention.test.ts  integration.test.ts
circuits/balance-proof/: Cargo.toml
circuits/balance-proof/src/: main.rs
circuits/income-proof/: Cargo.toml
circuits/income-proof/src/: main.rs
circuits/payment-proof/: Cargo.toml
circuits/payment-proof/src/: main.rs
contracts/intents-adapter/: Cargo.toml  deploy.sh
contracts/intents-adapter/src/: lib.rs
contracts/intents-adapter/tests/: e2e_flows_test.rs  integration_test.rs
contracts/payroll/: Cargo.toml
contracts/payroll-factory/: Cargo.toml  README.md  deploy.sh  upload-wasm.sh
contracts/payroll-factory/src/: lib.rs
contracts/payroll/src/: lib.rs
contracts/payroll/tests/: test_swap_feature.rs
contracts/wzec-token/: Cargo.toml  README.md  build.sh  deploy.sh
contracts/wzec-token/src/: lib.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: groth16.rs  lib.rs
contracts/zk-verifier/tests/: integration_test.rs
docs/: ACHIEVEMENT_SUMMARY.md  ARCHITECTURE.md  BRIDGE_ARCHITECTURE.md  BUG_FIXES_SUMMARY.md  BUG_FIX_BYTE_ORDER.md  DEFI_FEATURES_GUIDE.md  DEPLOYMENT_GUIDE.md  FAST_TESTING.md  FRONTEND_INTEGRATION.md  G2_FORMAT_VERIFICATION_SUMMARY.md  G2_SERIALIZATION_INVESTIGATION.md  INTENTS_IMPLEMENTATION_PROGRESS.md  INTENTS_MANUAL_TESTING.md  MAINNET_DEPLOYMENT.md  NEAR_ENDIANNESS_FINAL_SOLUTION.md  NEXT_STEPS_GROTH16_DEBUG.md  PAIRING_FAILURE_INVESTIGATION_REPORT.md  PRIVACY_ANALYSIS.md  PROOF_SERVER_ARCHITECTURE.md  RISC0_GROTH16_INVESTIGATION.md  SMOKING_GUN_FOUND.md  TRUSTLESS_ARCHITECTURE_PLAN.md  VK_ENDIANNESS_FIX.md  ZCASH_RPC_REFERENCE.md  ZCASH_SETUP.md
docs/architecture/: OVERVIEW.md  SYSTEM_ARCHITECTURE.md
docs/cross-chain/: CROSS_CHAIN_INTENTS.md  ZCASH_INTEGRATION_GAP_ANALYSIS.md
docs/intents/: INTENTS_IMPLEMENTATION_PROGRESS.md
docs/zk/: ADDING_PROOF_TYPES.md  GROTH16_FIX_IMPLEMENTATION.md  PROOF_GENERATION_GUIDE.md  RISC0_GROTH16_NEAR_ARCHITECTURE.md  TRUSTLESS_ARCHITECTURE_PLAN.md
ethereum-test/: foundry.toml
ethereum-test/cache/: solidity-files-cache.json  test-failures
ethereum-test/scripts/: convert_proof_to_solidity.py
ethereum-test/test/: CheckSelector.sol  DetailedDebugTest.sol  Risc0FullVerificationTest.sol  Risc0ProofTest.sol
payroll-nui/: jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
payroll-nui/src/: global.d.ts  test-setup.ts
payroll-nui/src/app/: globals.css  layout.tsx  page.tsx
payroll-nui/src/app/dashboard/auditor/: page.tsx
payroll-nui/src/app/dashboard/bridge/: page.tsx
payroll-nui/src/app/dashboard/company/: page.tsx
payroll-nui/src/app/dashboard/employee/: page.tsx
payroll-nui/src/app/onboarding/: layout.tsx
payroll-nui/src/app/onboarding/auditor/: page.tsx
payroll-nui/src/app/select-role/: layout.tsx  page.tsx
payroll-nui/src/components/: add-employee-dialog.tsx  fund-account-dialog.tsx  password-prompt-dialog.tsx  pay-employee-dialog.tsx  recurring-payment-dialog.tsx  wallet-guard.tsx
payroll-nui/src/components/layout/: footer.tsx  header.tsx
payroll-nui/src/components/ui/: button.tsx  card.tsx
payroll-nui/src/config/: contracts.ts
payroll-nui/src/contexts/: wallet-selector.tsx
payroll-nui/src/lib/: deploy-contract.ts  encryption-integration.test.ts  near.ts  secure-storage.test.ts  secure-storage.ts
payroll-nui/src/lib/hooks/: use-encrypted-keypair.ts  use-payroll-queries.ts
payroll-nui/src/theme/: index.ts  types.ts
payroll-nui/src/theme/themes/: payroll-dark.ts  payroll-light.ts
proof-server/: .env.example  Cargo.toml
proof-server/src/: config.rs  lib.rs  main.rs  state.rs
proof-server/src/routes/: health.rs  mod.rs  proof.rs
proof-server/src/services/: attestation.rs  mod.rs  prover.rs
proof-server/src/tee/: mod.rs
proof-server/src/types/: mod.rs
proof-server/tests/: check_control_ids.rs  compute_image_ids.rs  extract_vk.rs  format_vk_for_near.rs  generate_test_proof.rs  inspect_seal.rs  verify_generated_proof.rs
scripts/: README.md  build-all.sh  build-circuits.sh  check_control_root.rs  compare_vk_constants.py  delete-company.sh  deploy-testnet.sh  extract_risc0_vk.rs  generate_all_test_proofs.sh  generate_image_ids.sh  generate_test_proof.sh  image_ids.json  register_image_ids.sh  register_vk.sh  reverse_vk_constants.js  risc0_vk.json  start_proof_server.sh  test-zallet-commands.sh  test-zcash-bridge.sh
scripts/test_proofs/: average_income.json  credit_score.json  income_range.json  income_threshold.json  income_threshold_BACKUP.json  payment.json
scripts/vk_extractor/: Cargo.toml
scripts/vk_extractor/src/: main.rs
sdk/: jest.config.js  package-lock.json  package.json  tsconfig.json
sdk/src/: crypto.test.ts  crypto.ts  index.ts  intents.ts  payroll.ts  test-setup.ts  types.ts  verifier.ts  wzec.ts
tests/: DISCREPANCIES.md  INTEGRATION_TEST_UPDATES.md  README.md  integration.test.ts  intents.test.ts  package-lock.json  package.json  payroll.test.ts  setup.ts  tsconfig.json
(+5 files in other folders)
