[workspace]
resolver = "2"
members = [
    "contracts/payroll",
    "contracts/payroll-factory",
    "contracts/wzec-token",
    "contracts/zk-verifier",
    "contracts/intents-adapter",
    "circuits/payment-proof",
    "circuits/income-proof",
    "circuits/balance-proof",
    "proof-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/nel349/near-private-payroll"

[workspace.dependencies]
# NEAR SDK
near-sdk = "=5.5.0"
near-contract-standards = "=5.5.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"

# Cryptography
sha2 = "0.10"
hex = "0.4"

# RISC Zero - Pinned to 3.0.3 for version alignment
risc0-zkvm = "=3.0.3"
risc0-build = "=3.0.3"

# Testing
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
