[package]
name = "income-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "=3.0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }

# For building the guest binary
[[bin]]
name = "income-proof"
path = "src/main.rs"
