[package]
name = "payment-proof"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

# For building the guest binary
[[bin]]
name = "payment-proof"
path = "src/main.rs"
