[package]
name = "zk-verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { workspace = true, features = ["legacy"] }
serde = { workspace = true }
borsh = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hex-literal = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
bincode = "1.3"

# We'll use NEAR's alt_bn128 precompiles directly
# near_groth16_verifier has dependency conflicts with near-sdk 5.x

# RISC Zero verifier (when available for NEAR)
# risc0-zkvm = { workspace = true, features = ["verify"] }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
near-workspaces = "0.11"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
